@@ -28,6 +28,7 @@ JEDIT 4.1 VERSION HISTORY
   and line separator status
 - The text color and style used to show the "[n lines]" string can now
   be set independently of the EOL marker color
+- Bracket matching tweak (Alexander Maryanovsky)
 
 + Bug Fixes
 
